# nfx-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_Hashing.cpp  CMakeLists.txt  README.md
cmake/: nfx-core-config.cmake.in  nfxCoreBuildConfig.cmake  nfxCoreDependencies.cmake  nfxCoreInstall.cmake  nfxCorePackaging.cmake  nfxCoreSources.cmake
doc/: CMakeLists.txt
include/nfx/core/: CPU.h  Hashing.h
include/nfx/detail/core/: CPU.inl  Hashing.inl
samples/: CMakeLists.txt  Sample_CPU.cpp  Sample_Hashing.cpp
test/: CMakeLists.txt  TESTS_Hashing.cpp
